Fixed image-types letter spacing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ main
     display: flex;
     align-items: center;
     color: white;
-    font-family: 'Monserrat';
 }
 
 #socials
@@ -73,6 +72,8 @@ button
     border: none;
     margin: 1%;
     height: 25px;
+    font-family: 'Montserrat', regular;
+    letter-spacing: .2rem;
 }
 
 .portrait
